freest/test/prog/Valid/SessionTypes/TypeTeqU/TypeTeqU.fst
module TypeTeqU where

type T, U : *T
type T = U
type U = Int

main : T
main = 5
