freest/test/prog/Invalid/Typing/TNotInScope/TNotInScope.fst
module TNotInScope

type U = T
